# llm_client

./: .gitignore  AGENTS.md  README.md  pyproject.toml  setup.py  uv.toml
.beads/: issues.jsonl
docs/: codex-oauth-testing.md  v2-preview.md  v2-requirements-design.md
examples/: basic_usage.py  coherency_check.py
llm_client/: __init__.py  base.py  retry.py
llm_client/providers/: __init__.py  chutes.py  fireworks.py  google.py  moonshot.py  openai.py  openai_style.py  openrouter.py  tinker.py  tngtech.py  xai.py
llm_client/testing/: __init__.py  coherency.py
src/llm_client/: __init__.py  base.py  cli.py  codex_oauth.py  oauth.py  retry.py  v2_builder.py  v2_client.py  v2_models.py
src/llm_client/providers/: __init__.py  chutes.py  codex.py  google.py  google_agent_platform.py  local.py  openai_responses.py  openai_style.py  openrouter.py  stepfun.py  tinker.py
src/llm_client/testing/: coherency.py
tests/: test_cli.py  test_coherency_forced_subprovider.py  test_coherency_reasoning.py  test_error_mapping.py  test_oauth.py  test_providers.py  test_responses.py  test_retry.py  test_streaming.py  test_v2.py
