[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm_client"
version = "0.1.6"
description = "A clean, modular client library for interacting with various LLM providers"
readme = "README.md"
license = {text = "Apache-2.0"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"
dependencies = [
    "requests>=2.25.0",
]

[project.urls]
"Homepage" = "https://github.com/xlr8harder/llm_client"
"Bug Tracker" = "https://github.com/xlr8harder/llm_client/issues"
