[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm_client"
dynamic = ["version"]
description = "A clean, modular client library for interacting with various LLM providers"
readme = "README.md"
license = {text = "Apache-2.0"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.11"
dependencies = [
    "pytest>=9.0.2",
    "urllib3>=1.26.0",
]

[project.optional-dependencies]
# Test/dev dependencies (not required at runtime).
dev = [
    "requests>=2.0",
]

# Optional dependencies for the `tinker` provider.
# `tinker` is available on PyPI. `tinker_cookbook` is from xlr8harder fork (has normalize_weights).
tinker = [
    "tinker",
    "tinker_cookbook @ git+https://github.com/xlr8harder/tinker-cookbook.git",
]

[project.urls]
"Homepage" = "https://github.com/xlr8harder/llm_client"
"Bug Tracker" = "https://github.com/xlr8harder/llm_client/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "llm_client.__version__"}
